--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -49,8 +49,8 @@
   
         <script>
             var interval = 10000;
-            var splash_image = 'https://i.imgur.com/dPaIjEW.jpg';
-            var pause_image = 'https://i.imgur.com/aoz9sJn.jpg';
+            var splash_image = 'https://cdn.discordapp.com/attachments/401798260442005514/636604941586399261/AnarchyYoutube.jpg';
+            var pause_image = 'https://cdn.discordapp.com/attachments/401798260442005514/636604941586399261/AnarchyYoutube.jpg';
 
             var player = videojs('my-video');
             player.ready(function() {
